--- a/services.html
+++ b/services.html
@@ -203,7 +203,7 @@
                 <div class="col-md-4">
                     <h4>Contact Us</h4>
                     <ul class="contact-list">
-                        <li><i class="fas fa-map-marker-alt"></i> 14071 Pebble Hills Blvd, Ste 4, El Paso, TX 79938</li>
+                        <li><i class="fas fa-map-marker-alt"></i> 1840 Lee Trevino Dr Ste 100, El Paso, TX 79936</li>
                         <li><i class="fas fa-phone"></i> <a href="tel:(575) 528-8036">(575) 528-8036</a></li>
                     </ul>
                 </div>
@@ -211,8 +211,8 @@
                 <div class="col-md-4">
                     <h4>Follow Us</h4>
                     <div class="social-icons">
-                        <a href="https://www.facebook.com/YourPage" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://www.instagram.com/YourPage" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/ageless.beauty.aesthetics.7/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/agelessbeautyaesthetics_/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <!-- Site Map -->
@@ -221,9 +221,9 @@
                     <ul class="footer-links">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <li><a href="about.html">About Us</a></li>
+                     
                         <li><a href="contact.html">Contact</a></li>
-                        <li><a href="privacy.html">Privacy Policy</a></li>
+                  
                     </ul>
                 </div>
             </div>
