--- a/book.html
+++ b/book.html
@@ -104,10 +104,9 @@
                 <h4>Quick Links</h4>
                 <ul class="footer-links">
                     <li><a href="index.html">Home</a></li>
+                    <li><a href="services.html">Services</a></li>
                  
-                    <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact</a></li>
-              
                 </ul>
             </div>
         </div>
