--- a/book.html
+++ b/book.html
@@ -53,7 +53,7 @@
             <a href="https://www.facebook.com/ageless.beauty.aesthetics.7?mibextid=kFxxJD" class="text-pink mx-2" target="_blank" aria-label="Facebook">
                 <i class="fab fa-facebook-f"></i>
             </a>
-            <a href="tel:+1234567890" class="text-pink mx-2" aria-label="Phone">
+            <a href="tel:5755288036" class="text-pink mx-2" aria-label="Phone">
                 <i class="fas fa-phone-alt"></i>
             </a>
         </div>
